resolve Git issue

--- a/Extraction_Profiling/ExtractphoneReviews.ipynb
+++ b/Extraction_Profiling/ExtractphoneReviews.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "# Input\n",
-    "reviews_path = '../Data/input/schema_Review.gz'\n",
+    "reviews_path = '../Data/schema_Review.gz'\n",
     "\n",
     "# Output\n",
     "phonereviewLog_path = '../Logs/phoneReviews.log'\n",
