--- a/Intermediary/phoneWebsites.ipynb
+++ b/Intermediary/phoneWebsites.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-08-04T11:23:45.655Z"
+     "end_time": "2020-08-04T12:05:18.751032Z",
+     "start_time": "2020-08-04T12:05:18.699084Z"
     }
    },
    "outputs": [],
@@ -19,11 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-04T09:05:09.761262Z",
-     "start_time": "2020-08-04T09:05:09.732200Z"
+     "end_time": "2020-08-04T13:24:33.874522Z",
+     "start_time": "2020-08-04T13:24:33.863889Z"
     }
    },
    "outputs": [],
@@ -35,7 +36,8 @@
     "             'cell phone']\n",
     "\n",
     "# Output\n",
-    "output_path = '../Data/phone_sites.txt'"
+    "output_path = '../Data/phone_sites.txt'\n",
+    "new_out_path = '../Data/phones_new.txt'"
    ]
   },
   {
@@ -86,11 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-04T09:06:48.968027Z",
-     "start_time": "2020-08-04T09:06:48.517197Z"
+     "end_time": "2020-08-04T12:08:41.253457Z",
+     "start_time": "2020-08-04T12:08:40.784585Z"
     }
    },
    "outputs": [
@@ -147,7 +149,7 @@
        "freq                                                 2296"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,11 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-04T09:06:53.313910Z",
-     "start_time": "2020-08-04T09:06:52.863745Z"
+     "end_time": "2020-08-04T12:08:51.740872Z",
+     "start_time": "2020-08-04T12:08:51.553207Z"
     }
    },
    "outputs": [
@@ -203,7 +205,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>top</td>\n",
-       "      <td>https://nottabelle.com/ru/rozy-v-kolbe/king-fu...</td>\n",
+       "      <td>http://www.speckproducts.com/apple/iphone-case...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>freq</td>\n",
@@ -217,29 +219,27 @@
        "                                                      url\n",
        "count                                               15823\n",
        "unique                                              15823\n",
-       "top     https://nottabelle.com/ru/rozy-v-kolbe/king-fu...\n",
+       "top     http://www.speckproducts.com/apple/iphone-case...\n",
        "freq                                                    1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Was will ich tun: URL selektieren nach \n",
-    "#     keine Dupliate\n",
     "df = df.drop_duplicates(subset='url', keep='first')\n",
     "df.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-04T09:10:59.385833Z",
-     "start_time": "2020-08-04T09:10:56.143209Z"
+     "end_time": "2020-08-04T12:08:58.565585Z",
+     "start_time": "2020-08-04T12:08:56.828357Z"
     }
    },
    "outputs": [
@@ -284,7 +284,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>top</td>\n",
-       "      <td>https://nottabelle.com/ru/rozy-v-kolbe/king-fu...</td>\n",
+       "      <td>http://www.speckproducts.com/apple/iphone-case...</td>\n",
        "      <td>www.speckproducts.com</td>\n",
        "      <td>com</td>\n",
        "    </tr>\n",
@@ -302,7 +302,7 @@
        "                                                      url  \\\n",
        "count                                               15823   \n",
        "unique                                              15823   \n",
-       "top     https://nottabelle.com/ru/rozy-v-kolbe/king-fu...   \n",
+       "top     http://www.speckproducts.com/apple/iphone-case...   \n",
        "freq                                                    1   \n",
        "\n",
        "                       netloc suffix  \n",
@@ -312,7 +312,7 @@
        "freq                     3740   8785  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,8 +345,100 @@
    "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-04T09:27:06.169393Z",
-     "start_time": "2020-08-04T09:27:06.130325Z"
+     "end_time": "2020-08-04T13:13:30.786765Z",
+     "start_time": "2020-08-04T13:13:30.622936Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>url</th>\n",
+       "      <th>netloc</th>\n",
+       "      <th>suffix</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>count</td>\n",
+       "      <td>9410</td>\n",
+       "      <td>9410</td>\n",
+       "      <td>9410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>unique</td>\n",
+       "      <td>9410</td>\n",
+       "      <td>323</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>top</td>\n",
+       "      <td>https://www.speckproducts.com/apple/iphone-cas...</td>\n",
+       "      <td>www.speckproducts.com</td>\n",
+       "      <td>com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>freq</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3740</td>\n",
+       "      <td>8785</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      url  \\\n",
+       "count                                                9410   \n",
+       "unique                                               9410   \n",
+       "top     https://www.speckproducts.com/apple/iphone-cas...   \n",
+       "freq                                                    1   \n",
+       "\n",
+       "                       netloc suffix  \n",
+       "count                    9410   9410  \n",
+       "unique                    323     12  \n",
+       "top     www.speckproducts.com    com  \n",
+       "freq                     3740   8785  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df['suffix'].value_counts().tolist()\n",
+    "# df['suffix'].value_counts().index.tolist()\n",
+    "# allow .com, .co.uk, .net, .co.au, .ca, .us, .co.nz, .com.co, .org, .eu, .ie, .me, .shop\n",
+    "df = df.loc[df['suffix'].isin(['com','co.uk','net','co.au','ca','us','co.nz','com.co','org','eu','ie','me','shop'])]\n",
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-04T13:14:17.382088Z",
+     "start_time": "2020-08-04T13:14:17.355675Z"
     }
    },
    "outputs": [
@@ -354,20 +446,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                               url\n",
-      "0            www.speckproducts.com\n",
-      "1              www.crutchfield.com\n",
-      "2              www.myphonecase.com\n",
-      "3                    www.mvideo.ru\n",
-      "4                     lastprint.ru\n",
-      "..                             ...\n",
-      "558                   itstyle.shop\n",
-      "559              ph.bargainbro.com\n",
-      "560      bigredhair.threadless.com\n",
-      "561       www.jumpingbabyjacks.com\n",
-      "562  cityofpyramids.threadless.com\n",
+      "                              url\n",
+      "0           www.speckproducts.com\n",
+      "1             www.crutchfield.com\n",
+      "2             www.myphonecase.com\n",
+      "3                  nottabelle.com\n",
+      "4                    bestmvno.com\n",
+      "..                            ...\n",
+      "318  www.discount-low-voltage.com\n",
+      "319         rocain.threadless.com\n",
+      "320                  itstyle.shop\n",
+      "321      hopscotch.threadless.com\n",
+      "322     happyronin.threadless.com\n",
       "\n",
-      "[563 rows x 1 columns]\n"
+      "[323 rows x 1 columns]\n"
      ]
     }
    ],
@@ -379,21 +471,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-08-04T09:31:27.468Z"
+     "end_time": "2020-08-04T13:24:33.179797Z",
+     "start_time": "2020-08-04T13:14:50.504617Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exception: icecat.co.uk\n",
+      "exception: www.atomiccellular.com\n",
+      "exception: www.transformyourimages.co.uk\n",
+      "exception: www.asianfoodgrocer.com\n",
+      "exception: www.begoos.com\n",
+      "exception: icecat.us\n",
+      "exception: www.rssd.com\n",
+      "exception: www.easiercap.com\n",
+      "exception: www.dyesublimationblanks.com\n",
+      "exception: shopify.undergroundhiphop.com\n",
+      "exception: onecall.com\n",
+      "exception: www.ncds.ca\n",
+      "exception: mango-office.com\n"
+     ]
+    }
+   ],
    "source": [
-    "# find out if website has english content\n",
-    "# url = 'http://www.speckproducts.com'\n",
-    "# response = get(url)\n",
-    "# html_soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "# print(detect(html_soup.body.text))\n",
-    "\n",
-    "\n",
     "def detectLang(row):\n",
     "    try:\n",
     "        url = row['url']\n",
@@ -411,15 +517,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-08-04T09:36:01.267Z"
+     "end_time": "2020-08-04T13:24:33.551453Z",
+     "start_time": "2020-08-04T13:24:33.521724Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                              url lang\n",
+      "0           www.speckproducts.com   en\n",
+      "1             www.crutchfield.com   en\n",
+      "2             www.myphonecase.com   en\n",
+      "3                  nottabelle.com   en\n",
+      "4                    bestmvno.com   en\n",
+      "..                            ...  ...\n",
+      "317      thebearly.threadless.com   en\n",
+      "318  www.discount-low-voltage.com   en\n",
+      "319         rocain.threadless.com   en\n",
+      "321      hopscotch.threadless.com   en\n",
+      "322     happyronin.threadless.com   en\n",
+      "\n",
+      "[271 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(df_domains)\n",
+    "df_phone = df_domains.loc[df_domains['lang'] == \"en\"]\n",
+    "print(df_phone)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-04T13:27:40.741193Z",
+     "start_time": "2020-08-04T13:27:40.666816Z"
     }
    },
    "outputs": [],
    "source": [
-    "print(df_domains)"
+    "with open(new_out_path,'a') as file:\n",
+    "    for index, row in df_phone.iterrows():\n",
+    "        file.write( row['url'] + \"\\n\")"
    ]
   },
   {
