--- a/Extraction_Profiling/ExtractphoneReviews.ipynb
+++ b/Extraction_Profiling/ExtractphoneReviews.ipynb
@@ -55,7 +55,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<sqlite3.Cursor at 0x2d04b0dc9d0>"
+      "text/plain": [
+       "<sqlite3.Cursor at 0x2d04b0dc9d0>"
+      ]
      },
      "execution_count": 3,
      "metadata": {},
@@ -105,6 +107,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "taxo_pattern = re.compile(\"<http://schema.org/Review/description>|\"\\\n",
@@ -117,13 +124,7 @@
     "phone_lst = ['smartphone', 'phone',\n",
     "             'phone case', 'phone cable', 'phone charger', 'phone mount',\n",
     "             'cell phone']"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -136,7 +137,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "False"
+      "text/plain": [
+       "False"
+      ]
      },
      "execution_count": 7,
      "metadata": {},
@@ -161,6 +164,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "for item in phone_lst:\n",
@@ -217,13 +225,7 @@
     "\n",
     "logging.debug(\"detected \" + str(detected) + \", inserted: \" + str(inserted) +\" lines out of \" + str(i) + \"; not in taxo: \" + str(not_taxo))\n",
     "logging.debug(\"Done getting Review entries with Reviewbodies, descriptions or websites at the Object having phone or related words\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -251,19 +253,18 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df = pd.read_sql_query(\"SELECT * from phonereviews\", conn)\n",
     "df = df[df.REVIEWBODY.notnull()&df.REVIEWRATING.notnull()]\n",
     "df = df.drop_duplicates(subset='REVIEWBODY', keep='first')\n",
     "logging.debug(df.describe)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
