extract phone and scrape movie reviews

--- a/Extraction_Profiling/ScrapemovieReviews.ipynb
+++ b/Extraction_Profiling/ScrapemovieReviews.ipynb
@@ -50,17 +50,14 @@
     "db_path = '../Data/moviewreviews.db'\n",
     "\n",
     "# Output\n",
-    "# log_path = '../Logs/movieReviews.log'\n",
+    "log_path = '../Logs/movieReviews.log'\n",
     "\n",
-    "# logger = logging.getLogger()\n",
-    "# fhandler = logging.FileHandler(filename=moviereviewLog_path, mode='a')\n",
-    "# formatter = logging.Formatter('%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
-    "# fhandler.setFormatter(formatter)\n",
-    "# logger.addHandler(fhandler)\n",
-    "# logger.setLevel(logging.DEBUG)\n",
-    "\n",
-    "# conn = sqlite3.connect(db_path)\n",
-    "# c = conn.cursor()\n",
+    "logger = logging.getLogger()\n",
+    "fhandler = logging.FileHandler(filename=log_path, mode='a')\n",
+    "formatter = logging.Formatter('%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
+    "fhandler.setFormatter(formatter)\n",
+    "logger.addHandler(fhandler)\n",
+    "logger.setLevel(logging.DEBUG)\n",
     "\n",
     "conn = sqlite3.connect(db_path)\n",
     "c = conn.cursor()\n",
@@ -166,7 +163,7 @@
     "movie_count = 0\n",
     "review_count = 0\n",
     "# umstellen auf 1001\n",
-    "for page in range (0,11):\n",
+    "for page in range (11,20):\n",
     "    page_count= page*50+1\n",
     "    # print(page_count)\n",
     "    url = f'https://www.imdb.com/search/title/?title_type=tv_movie,tv_episode&release_date=2000-01-01,2020-12-31&user_rating=1.0,10.0&languages=en&start={page_count}&ref_=adv_nxt'\n",
@@ -179,7 +176,7 @@
     "    for movie in movie_containers:\n",
     "        # link to site with all review previews for each movie\n",
     "        link = 'https://www.imdb.com/' + movie_containers[i].a['href'] + 'reviews'\n",
-    "        # link = \"https://www.imdb.com/review/rw3754733/\"\n",
+    "        # link = 'https://www.imdb.com//title/tt8022928/reviews'\n",
     "        # print(link)\n",
     "        movie_count += 1\n",
     "        i += 1\n",
@@ -188,6 +185,8 @@
     "            permalinks = tiles.find_all('a', href=True, text='Permalink')\n",
     "            for permalink in permalinks:\n",
     "                review_link = host + permalink['href']\n",
+    "                # review_link = \"https://www.imdb.com/review/rw3754733/\"\n",
+    "                # review_link = \"https://www.imdb.com/review/rw5040450/\"\n",
     "                # print(review_link)\n",
     "                review_count += 1\n",
     "                review_soup = BeautifulSoup(get(review_link).text, 'html.parser')\n",
@@ -196,38 +195,43 @@
     "                except:\n",
     "                    pass\n",
     "                container = review_soup.find(\"script\",type=\"application/ld+json\")\n",
-    "                for item in container:\n",
-    "                    if item.__contains__('http://schema.org'):\n",
-    "                        text = str(item.extract())\n",
-    "                        oJson = json.loads(text)\n",
-    "                        # print(oJson)\n",
-    "                        if (warning):\n",
-    "                            # (\"WARNING!\")\n",
-    "                            reviewBodyContainer = review_soup.body.find_all('div', class_=\"text show-more__control\")\n",
-    "                            for item in reviewBodyContainer:\n",
-    "                                reviewBody = item.text\n",
-    "                            # print(reviewBodyContainer)\n",
-    "                            # reviewBody = reviewBodyContainer[0].text\n",
-    "                        else:\n",
-    "                            reviewBody = str(oJson['reviewBody'])\n",
-    "                        node = generateNode(31)\n",
-    "                        reviewRating = str(oJson['reviewRating'])\n",
-    "                        worstRating = str(oJson['reviewRating']['worstRating'])\n",
-    "                        bestRating = str(oJson['reviewRating']['bestRating'])\n",
-    "                        ratingValue = str(oJson['reviewRating']['ratingValue'])\n",
-    "                        \n",
-    "            \n",
-    "                        # print('node:' + node)\n",
-    "                        # print('url: '+ review_link)\n",
-    "                        # print('reviewBody: ' + reviewBody)\n",
-    "                        # print('worstRating: ' + worstRating)\n",
-    "                        # print('bestRating: ' + bestRating)\n",
-    "                        # print('ratingValue: ' + ratingValue)\n",
-    "                            \n",
-    "                        # print(\"INSERT OR IGNORE INTO MOVIEREVIEWS (NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING) VALUES (?,?,?,?,?,?,?);\"\"\",(node,url,reviewBody,reviewRating,ratingValue,bestRating,worstRating))\n",
-    "                        c.execute(\"INSERT OR IGNORE INTO test (NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING) VALUES (?,?,?,?,?,?,?);\",(node,url,reviewBody,reviewRating,ratingValue,bestRating,worstRating))\n",
-    "                        conn.commit()\n",
-    "print(\"number of reviews: \" + str(review_count))\n"
+    "                try:\n",
+    "                    for item in container:\n",
+    "                        if item.__contains__('http://schema.org'):\n",
+    "                            text = str(item.extract())\n",
+    "                            oJson = json.loads(text)\n",
+    "                            # print(oJson)\n",
+    "                            if (warning):\n",
+    "                                # (\"WARNING!\")\n",
+    "                                reviewBodyContainer = review_soup.body.find_all('div', class_=\"text show-more__control\")\n",
+    "                                for item in reviewBodyContainer:\n",
+    "                                    reviewBody = item.text\n",
+    "                                # print(reviewBodyContainer)\n",
+    "                                # reviewBody = reviewBodyContainer[0].text\n",
+    "                            else:\n",
+    "                                reviewBody = str(oJson['reviewBody'])\n",
+    "                            try:\n",
+    "                                node = generateNode(31)\n",
+    "                                reviewRating = str(oJson['reviewRating'])\n",
+    "                                worstRating = str(oJson['reviewRating']['worstRating'])\n",
+    "                                bestRating = str(oJson['reviewRating']['bestRating'])\n",
+    "                                ratingValue = str(oJson['reviewRating']['ratingValue'])\n",
+    "                            except: \n",
+    "                                continue\n",
+    "\n",
+    "                            # print('node:' + node)\n",
+    "                            # print('url: '+ review_link)\n",
+    "                            # print('reviewBody: ' + reviewBody)\n",
+    "                            # print('worstRating: ' + worstRating)\n",
+    "                            # print('bestRating: ' + bestRating)\n",
+    "                            # print('ratingValue: ' + ratingValue)\n",
+    "\n",
+    "                            # print(\"INSERT OR IGNORE INTO MOVIEREVIEWS (NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING) VALUES (?,?,?,?,?,?,?);\"\"\",(node,url,reviewBody,reviewRating,ratingValue,bestRating,worstRating))\n",
+    "                            c.execute(\"INSERT OR IGNORE INTO moviereviews (NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING) VALUES (?,?,?,?,?,?,?);\",(node,url,reviewBody,reviewRating,ratingValue,bestRating,worstRating))\n",
+    "                            conn.commit()\n",
+    "                except:\n",
+    "                    continue\n",
+    "logging.debug(\"number of reviews: \" + str(review_count))\n"
    ]
   }
  ],
