walmart scrape movies&TV

--- a/Scraping/walmart_movieTV.ipynb
+++ b/Scraping/walmart_movieTV.ipynb
@@ -11,8 +11,8 @@
    },
    "outputs": [],
    "source": [
-    "from selenium import webdriver\n",
-    "from selenium.webdriver.support.ui import WebDriverWait as wait\n",
+    "# from selenium import webdriver\n",
+    "# from selenium.webdriver.support.ui import WebDriverWait as wait\n",
     "from bs4 import BeautifulSoup\n",
     "from requests import get\n",
     "import json\n",
