get current review adresses + attempt scape + scrape reviewschview

--- a/Profiling/Amazon_statistics_Movies_TV_Cellphones_Accessories.ipynb
+++ b/Profiling/Amazon_statistics_Movies_TV_Cellphones_Accessories.ipynb
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
    ],
    "source": [
     "data = []\n",
-    "with gzip.open('reviews_Movies_and_TV_5.json.gz') as f:\n",
+    "with gzip.open('../Data/reviews_Movies_and_TV_5.json.gz') as f:\n",
     "    for l in f:\n",
     "        data.append(json.loads(l.strip()))\n",
     "    \n",
