--- a/Scraping/Test.ipynb
+++ b/Scraping/Test.ipynb
@@ -2,24 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 76,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<div itemprop=\"reviewRating\" itemscope=\"\" itemtype=\"http://schema.org/Rating\">\n",
-      "<div content=\"5\" itemprop=\"bestRating\">\n",
-      "<div content=\"0\" itemprop=\"worstRating\">\n",
-      "<div content=\"5\" itemprop=\"ratingValue\">\n",
-      "</div>\n",
-      "</div>\n",
-      "</div>\n",
-      "</div>\n",
-      "amount of reviews extracted: 1, amount of entries without review annotations: 0 amount of entries without rating: 0\n"
+      "node:_:znodeNqI8k29TnBq2GSC2dc7rhORcAtd2kg3\n",
+      "url: https://www.empireonline.com/movies/reviews/mandalorian-peyton-reed-hints-s2-director/\n",
+      "reviewBody: If you&amp;#39;re a director with a big, Star Wars-focused announcement to make, there are few better days than May the fourth. Which explains why both Robert Rodriguez and Ant-Man And The Wasp&amp;#39;s ...\n",
+      "worstRating: 1\n",
+      "bestRating: 5\n",
+      "ratingValue: \n"
      ]
     }
    ],
@@ -29,11 +29,14 @@
     "import random\n",
     "import string\n",
     "import sqlite3\n",
+    "import json\n",
+    "import html.parser as htmlparser\n",
+    "parser = htmlparser.HTMLParser()\n",
     "import logging\n",
     "\n",
     "# Input\n",
-    "flickfilosopher_file = '../Scraping/flickfilosopher.txt'\n",
-    "current_reviews = set(line.strip() for line in open(flickfilosopher_file))\n",
+    "# flickfilosopher_file = '../Scraping/flickfilosopher.txt'\n",
+    "# current_reviews = set(line.strip() for line in open(flickfilosopher_file))\n",
     "\n",
     "# Output\n",
     "# log_path = '../Logs/movieReviews.log'\n",
@@ -58,66 +61,42 @@
     "review_count = 0\n",
     "no_annotation = 0\n",
     "no_rating = 0\n",
+    "link_count = 0\n",
     "\n",
-    "review_link =\"https://www.flickfilosopher.com/2016/02/the-act-of-killing-and-the-look-of-silence-documentaries-review-when-horror-doesnt-destroy-humanity.html\"\n",
-    "if review_link is not None:\n",
-    "    if review_link.endswith('html'):\n",
-    "        if review_link in current_reviews:\n",
-    "            pass\n",
-    "        else:\n",
-    "            review_soup = BeautifulSoup(get(review_link).text, 'lxml')\n",
-    "            review_html = review_soup.find(\"div\", itemtype=\"http://schema.org/Review\")\n",
-    "            reviewBody = \"\"\n",
-    "            if review_html is None:\n",
+    "host = \"https://www.empireonline.com\"\n",
+    "review_count = 0\n",
+    "no_annotation = 0\n",
+    "\n",
+    "for page in range (1,419):\n",
+    "    url = f'https://www.empireonline.com/movies/reviews/{page}/'\n",
+    "    soup = BeautifulSoup(get(url).text, \"lxml\")\n",
+    "    movie_container = soup.find_all(\"div\", class_=\"image-content\")\n",
+    "    for link in movie_container:\n",
+    "        review_link = host + link.a['href']\n",
+    "        response = get(review_link)\n",
+    "        review_soup = BeautifulSoup(response.text, 'lxml')\n",
+    "        try:\n",
+    "            data = json.loads(\"\".join(review_soup.find(\"script\", {\"type\": \"application/ld+json\"}).contents),strict=False)\n",
+    "            if not data['@type'] == \"review\":\n",
     "                no_annotation += 1\n",
+    "                pass\n",
     "            else:\n",
-    "                try:\n",
-    "                    reviewBody_html = review_html.find_all(\"div\", class_=\"reviewtext\")\n",
-    "                    reviewRating = review_soup.find(\"div\", itemtype=\"http://schema.org/Rating\")\n",
-    "                    for item in reviewBody_html:\n",
-    "                        reviewBody += item.p.text\n",
-    "                    worstRating_tag = reviewRating.find(\"meta\", itemprop=\"worstRating\")\n",
-    "                    bestRating_tag = reviewRating.find(\"meta\", itemprop=\"bestRating\")\n",
-    "                    ratingValue_tag = reviewRating.find(\"meta\", itemprop=\"ratingValue\")\n",
-    "                    if worstRating_tag is None:\n",
-    "                        worstRating = reviewRating.find(\"div\", itemprop=\"worstRating\")[\"content\"]\n",
-    "                        bestRating = reviewRating.find(\"div\", itemprop=\"bestRating\")[\"content\"]\n",
-    "                        ratingValue = reviewRating.find(\"div\", itemprop=\"ratingValue\")[\"content\"]\n",
-    "                    else:\n",
-    "                        worstRating = worstRating_tag[\"content\"]\n",
-    "                        bestRating = bestRating_tag[\"content\"]\n",
-    "                        ratingValue = ratingValue_tag[\"content\"]\n",
-    "                    if ratingValue == \"\":\n",
-    "                        no_rating += 1\n",
-    "                    else:\n",
-    "                        node = generateNode(31)\n",
-    "                        c.execute(f\"INSERT OR IGNORE INTO {db_name} (NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING) VALUES (?,?,?,?,?,?,?);\",(node,review_link,reviewBody,str(reviewRating),ratingValue,bestRating,worstRating))\n",
-    "                        conn.commit()\n",
-    "                        review_count += 1\n",
-    "                except Exception as e:\n",
-    "                    raise(e)\n",
-    "                    print(\"Error: \" + str(review_link))\n",
+    "                reviewBody = data['description'].replace('\\n','')\n",
+    "                worstRating = data['reviewRating']['worstRating']\n",
+    "                bestRating = data['reviewRating']['bestRating']\n",
+    "                ratingValue = data['reviewRating']['ratingValue']\n",
+    "                reviewRating = \"already included\"\n",
+    "                node = generateNode(31)\n",
+    "                # c.execute(f\"INSERT OR IGNORE INTO {db_name} (NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING) VALUES (?,?,?,?,?,?,?);\", (node, review_link, reviewBody, str(reviewRating), ratingValue, bestRating, worstRating))\n",
+    "                # conn.commit()\n",
+    "                review_count += 1\n",
+    "        except Exception as e:\n",
+    "            logging.debug(\"Error: \" + str(review_link))\n",
+    "            logging.debug(str(review_soup))\n",
+    "            raise(e)\n",
     "\n",
-    "\n",
-    "print(\"amount of reviews extracted: \" + str(review_count) + \", amount of entries without review annotations: \" + str(no_annotation) + \" amount of entries without rating: \" + str(no_rating))\n",
-    "\n",
-    "\n",
-    "\n"
+    "print()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
   }
  ],
  "metadata": {
