--- a/Scraping/movieTV_rollingstone.ipynb
+++ b/Scraping/movieTV_rollingstone.ipynb
@@ -9,12 +9,14 @@
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
+    "# import requests\n",
     "from requests import get\n",
     "import json\n",
     "import random\n",
     "import string\n",
     "import sqlite3\n",
-    "import logging\n"
+    "import logging\n",
+    "import re\n"
    ]
   },
   {
@@ -71,37 +73,117 @@
     "no_annotation = 0\n",
     "no_rating = 0\n",
     "\n",
-    "for page in range (1,414):\n",
-    "    url = f'https://www.rollingstone.com/movies/movie-reviews/page/{page}/'\n",
-    "    soup = BeautifulSoup(get(url).text, 'lxml')\n",
-    "    movie_container = soup.find_all(\"a\", class_=\"c-card__wrap\")\n",
-    "    for link in movie_container:\n",
-    "        review_link = link.get('href')\n",
-    "        if not \"movie-reviews\" in review_link:\n",
-    "            pass\n",
-    "        else:\n",
-    "            review_soup = BeautifulSoup(get(review_link).text, 'lxml')\n",
-    "            review_html = review_soup.find(id=\"pmc-movie-review-snippet\")\n",
-    "            if review_html is None:\n",
-    "                no_annotation += 1\n",
-    "            else:\n",
-    "                for item in review_html:\n",
-    "                    jsonExtract = str(item).split('\\n')[2].replace(\";\", \"\")\n",
-    "                data = json.loads(\"\".join(jsonExtract))\n",
     "\n",
-    "                reviewBody = data['description']\n",
-    "                ratingValue = str(data['reviewRating']['ratingValue'])\n",
-    "                bestRating = str(data['reviewRating']['bestRating'])\n",
-    "                worstRating = str(data['reviewRating']['worstRating'])\n",
-    "                reviewRating = \"already included\"\n",
-    "\n",
-    "                node = generateNode(31)\n",
-    "                c.execute(f\"INSERT OR IGNORE INTO {db_name} (NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING) VALUES (?,?,?,?,?,?,?);\",(node,review_link,reviewBody,str(reviewRating),ratingValue,bestRating,worstRating))\n",
-    "                conn.commit()\n",
-    "                review_count += 1\n",
-    "\n",
-    "logging.debug(\"Reviews extracted: \" + str(review_count) + \" , reviews without Review Annotation: \" + str(no_annotation))\n"
+    "for page in range (1,419):\n",
+    "    url = f'https://www.empireonline.com/movies/reviews/{page}/'\n",
+    "    soup = BeautifulSoup(get(url).text, 'lxml')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.empireonline.com/movies/reviews/young-ahmed/\n",
+      "https://www.empireonline.com/movies/reviews/endings-beginnings/\n",
+      "https://www.empireonline.com/movies/reviews/perfect-10/\n",
+      "https://www.empireonline.com/movies/reviews/an-american-pickle/\n",
+      "https://www.empireonline.com/movies/reviews/host-2/\n",
+      "https://www.empireonline.com/movies/reviews/infamous-2020/\n",
+      "https://www.empireonline.com/movies/reviews/black-is-king/\n",
+      "https://www.empireonline.com/movies/reviews/unhinged/\n",
+      "https://www.empireonline.com/movies/reviews/the-fight/\n",
+      "https://www.empireonline.com/movies/reviews/last-and-first-men/\n",
+      "https://www.empireonline.com/movies/reviews/the-vigil/\n",
+      "https://www.empireonline.com/movies/reviews/summerland/\n",
+      "https://www.empireonline.com/movies/reviews/proxima/\n",
+      "https://www.empireonline.com/movies/reviews/make-up/\n",
+      "https://www.empireonline.com/movies/reviews/stage-mother/\n",
+      "https://www.empireonline.com/movies/reviews/saint-frances/\n",
+      "https://www.empireonline.com/movies/reviews/how-to-build-a-girl/\n",
+      "https://www.empireonline.com/movies/reviews/cursed-review-2/\n",
+      "https://www.empireonline.com/movies/reviews/back-roads/\n",
+      "https://www.empireonline.com/movies/reviews/clemency-review/\n",
+      "https://www.empireonline.com/movies/reviews/come-as-you-are/\n",
+      "https://www.empireonline.com/movies/reviews/arthur-merlin-knights-of-camelot/\n",
+      "https://www.empireonline.com/movies/reviews/arkansas/\n",
+      "https://www.empireonline.com/movies/reviews/above-suspicion/\n",
+      "https://www.empireonline.com/movies/reviews/scoob/\n",
+      "https://www.empireonline.com/movies/reviews/finding-the-way-back/\n",
+      "https://www.empireonline.com/movies/reviews/greyhound/\n",
+      "https://www.empireonline.com/movies/reviews/the-old-guard/\n",
+      "https://www.empireonline.com/movies/reviews/lynn-lucy/\n"
+     ]
+    }
+   ],
+   "source": [
+    "host = \"https://www.empireonline.com\"\n",
+    "url = 'https://www.empireonline.com/movies/reviews/1/'\n",
+    "soup = BeautifulSoup(get(url).text, 'lxml')\n",
+    "movie_container = soup.find_all(\"div\", class_=\"image-content\")\n",
+    "# print(movie_container)\n",
+    "for link in movie_container:\n",
+    "    # print(link)\n",
+    "    # print(link.a['href'])\n",
+    "    review_link = host + link.a['href']\n",
+    "    # if not \"movie-reviews\" in review_link:\n",
+    "    #     pass\n",
+    "    # else:\n",
+    "    # print(review_link)\n",
+    "#"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "outputs": [],
+   "source": [
+    "review_link = \"https://www.empireonline.com/movies/reviews/young-ahmed/\"\n",
+    "review_soup = BeautifulSoup(get(review_link).text, 'lxml')\n",
+    "# print(a)\n",
+    "data = json.loads(\"\".join(review_soup.find(\"script\", type=\"application/ld+json\").contents))\n",
+    "if not data['@type'] == \"review\":\n",
+    "    no_annotation +=1\n",
+    "    pass\n",
+    "else:\n",
+    "\n",
+    "    reviewBody = data['description']\n",
+    "    worstRating = data['reviewRating']['worstRating']\n",
+    "    bestRating = data['reviewRating']['bestRating']\n",
+    "    ratingValue = data['reviewRating']['ratingValue']\n",
+    "    reviewRating = \"already included\"\n",
+    "\n",
+    "\n",
+    "    node = generateNode(31)\n",
+    "\n",
+    "    # print('node:' + node)\n",
+    "    # print('url: '+ review_link)\n",
+    "    # print('reviewBody: ' + reviewBody)\n",
+    "    # print('worstRating: ' + worstRating)\n",
+    "    # print('bestRating: ' + bestRating)\n",
+    "    # print('ratingValue: ' + ratingValue)\n",
+    "\n",
+    "    c.execute(f\"INSERT OR IGNORE INTO {db_name} (NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING) VALUES (?,?,?,?,?,?,?);\",(node,review_link,reviewBody,str(reviewRating),ratingValue,bestRating,worstRating))\n",
+    "    conn.commit()\n",
+    "    review_count += 1\n",
+    "\n",
+    "logging.debug(\"Reviews extracted: \" + str(review_count) + \" , reviews without Review Annotation: \" + str(no_annotation))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -131,10 +213,22 @@
     "\n",
     "# review_soup = BeautifulSoup(get(review_link).text, 'lxml')\n",
     "# review_html = review_soup.find(\"div\", itemtype=\"http://schema.org/Review\")\n",
+    "# review_html = review_soup.find(id=\"pmc-movie-review-snippet\")\n",
     "\n",
-    "# data = json.loads(\"\".join(review_soup.find_all(\"script\", {\"type\":\"application/ld+json\"}).contents))\n",
+    "# for item in review_html:\n",
+    "#     jsonExtract = str(item).split('\\n')[2].replace(\";\", \"\")\n",
+    "#     data = json.loads(\"\".join(jsonExtract))\n",
+    "\n",
+    "    # reviewBody = data['description']\n",
+    "    # ratingValue = str(data['reviewRating']['ratingValue'])\n",
+    "    # bestRating = str(data['reviewRating']['bestRating'])\n",
+    "    # worstRating = str(data['reviewRating']['worstRating'])\n",
+    "    # reviewRating = \"already included\"\n",
+    "\n",
+    "# data = json.loads(\"\".join(review_soup.find(\"script\", type=\"application/ld+json\").contents))\n",
     "\n",
     "# reviewBody_html = review_html.find_all(\"div\", class_=\"reviewtext\")\n",
+    "\n",
     "# reviewRating = review_soup.find(\"div\", itemtype=\"http://schema.org/Rating\")\n",
     "\n",
     "# reviewBody += item.p.text\n",
