correction empireonline + cinemablend

--- a/Scraping/movieTV_rollingstone.ipynb
+++ b/Scraping/movieTV_rollingstone.ipynb
@@ -215,6 +215,10 @@
     "# review_html = review_soup.find(\"div\", itemtype=\"http://schema.org/Review\")\n",
     "# review_html = review_soup.find(id=\"pmc-movie-review-snippet\")\n",
     "\n",
+    "response = get(review_link, headers={'User-Agent': 'Custom'})\n",
+    "# if response.status_code == 404:\n",
+    "#     fail_lst.append(review_link)\n",
+    "\n",
     "# for item in review_html:\n",
     "#     jsonExtract = str(item).split('\\n')[2].replace(\";\", \"\")\n",
     "#     data = json.loads(\"\".join(jsonExtract))\n",
@@ -226,6 +230,7 @@
     "    # reviewRating = \"already included\"\n",
     "\n",
     "# data = json.loads(\"\".join(review_soup.find(\"script\", type=\"application/ld+json\").contents))\n",
+    "# data = json.loads(\"\".join(review_soup.find(\"script\", {\"type\": \"application/ld+json\"}).contents),strict=False)\n",
     "\n",
     "# reviewBody_html = review_html.find_all(\"div\", class_=\"reviewtext\")\n",
     "\n",
